# leptos-daisy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PLAYGROUND.md  README.md  Trunk.toml  index.html  leptosfmt.toml  package.json  telemetry-id  test_artboard.html
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-crate.yml
.vibe/: config.toml
components_manifest/: alert.yml  artboard.yml  avatar.yml  backdrop.yml  badge.yml  bottom_navigation.yml  breadcrumbs.yml  button.yml  card.yml  carousel.yml  chat.yml  checkbox.yml  collapse.yml  countdown.yml  diff.yml  divider.yml  dock.yml  drawer.yml  dropdown.yml  fab.yml  fieldset.yml  file_input.yml  filter.yml  footer.yml  hero.yml  indicator.yml  input.yml  join.yml  kbd.yml  label.yml  layout.yml  link.yml  list.yml  loading.yml  mask.yml  menu.yml  mockup_browser.yml  mockup_code.yml  mockup_phone.yml  mockup_window.yml  (+28 more)
crates/leptos-daisyui/: Cargo.toml  README.md
crates/leptos-daisyui/src/: lib.rs  prelude.rs
crates/leptos-daisyui/src/components/: alert.rs  artboard.rs  avatar.rs  backdrop.rs  badge.rs  bottom_navigation.rs  breadcrumbs.rs  button.rs  card.rs  carousel.rs  chat.rs  checkbox.rs  collapse.rs  combobox.rs  command_palette.rs  countdown.rs  diff.rs  divider.rs  dock.rs  drawer.rs  dropdown.rs  empty_state.rs  error_state.rs  fab.rs  fieldset.rs  file_input.rs  filter.rs  footer.rs  form_field.rs  hero.rs  icon_button.rs  indicator.rs  input.rs  join.rs  kbd.rs  label.rs  label_button.rs  layout.rs  link.rs  link_button.rs  (+37 more)
crates/leptos-daisyui/src/components/layout/: columns.rs  container.rs  grid.rs  header.rs  mod.rs  shells.rs  sidebar.rs  stacked.rs
crates/leptos-daisyui/src/interactive/: confirm_dialog.rs  drawer_controller.rs  mod.rs  modal_controller.rs  sort_controller.rs  toast_controller.rs
crates/leptos-daisyui/src/themes/: aesthetic.rs  aesthetic_components.rs  aesthetic_css.rs  builtin.rs  mod.rs  switching.rs  terminal.rs
crates/leptos-daisyui/src/utils/: class.rs  config.rs  mod.rs
crates/leptos-daisyui/src/variants/: color.rs  mod.rs  size.rs  state.rs  variant.rs
crates/leptos-daisyui/tests/: dock_security.rs  smoke_api.rs
crates/showcase/: COMPLETION_SUMMARY.md  COMPONENT_CHECKLIST.md  Cargo.toml  README.md  ROLLOUT_PLAN.md  TEMPLATE.md  index.html
crates/showcase/src/: app.rs  lib.rs  main.rs
crates/showcase/src/components/: class_table.rs  code_block.rs  component_preview.rs  mod.rs  syntax.rs
crates/showcase/src/pages/: aesthetic_gallery_page.rs  aesthetic_page.rs  alert_page.rs  artboard_page.rs  avatar_page.rs  backdrop_page.rs  badge_page.rs  bottom_navigation_page.rs  breadcrumbs_page.rs  button_page.rs  card_page.rs  carousel_page.rs  chat_page.rs  checkbox_page.rs  collapse_page.rs  combobox_page.rs  command_palette_page.rs  confirm_dialog_page.rs  countdown_page.rs  diff_page.rs  divider_page.rs  dock_page.rs  drawer_page.rs  dropdown_page.rs  empty_state_page.rs  error_state_page.rs  fab_page.rs  fieldset_page.rs  file_input_page.rs  filter_page.rs  footer_page.rs  form_field_page.rs  hero_page.rs  home.rs  icon_button_page.rs  indicator_page.rs  input_page.rs  join_page.rs  kbd_page.rs  label_button_page.rs  (+48 more)
crates/showcase/style/: main.css  output.css
docs/: leptos-daisyui-development-plan.md  lib.md
examples/: alert_demo.rs  alert_reactive_demo.rs  basic.rs  button_demo.rs
plans/: multi-column-implementation-tasks.md  multi-column-layout-design.md  sidebar-layout-design.md  stacked-layout-design.md  stacked-layout-implementation-tasks.md
scripts/: release-tag.sh
src/: lib.rs  prelude.rs
src/components/: alert.rs  badge.rs  button.rs  card.rs  mod.rs  modal.rs  navbar.rs
src/utils/: aria.rs  attrs.rs  class.rs  config.rs  mod.rs
src/variants/: color.rs  mod.rs  size.rs  state.rs  variant.rs
tests/: basic_test.rs  button_test.rs
