[package]
name = "leptos-daisy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Leptos components for DaisyUI - Tailwind CSS component library"
repository = "https://github.com/yourusername/leptos-daisy"
keywords = ["leptos", "daisyui", "tailwind", "components", "web"]
categories = ["gui", "web-programming", "wasm"]

[dependencies]
leptos = { version = "0.8.15", features = ["csr", "hydrate"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.11"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"

[dev-dependencies]
leptos = { version = "0.8.15", features = ["csr", "hydrate", "ssr"] }

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
hydrate = ["leptos/hydrate"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]
