[workspace]
members = ["crates/leptos-daisyui", "crates/showcase"]
resolver = "2"

# Cargo-leptos metadata for the showcase app
[[workspace.metadata.leptos]]
name = "showcase"
output-name = "showcase"
site-root = "target/site"
style-file = "crates/showcase/style/main.css"
assets-dir = "crates/showcase/assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-package = "showcase"
lib-package = "showcase"
bin-features = ["ssr"]
lib-features = ["hydrate"]


