[package]
name = "leptos-daisyui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Leptos components for DaisyUI - Tailwind CSS component library"
repository = "https://github.com/yourusername/leptos-daisy"
keywords = ["leptos", "daisyui", "tailwind", "components", "web"]
categories = ["gui", "web-programming", "wasm"]

[dependencies]
leptos = { version = "0.8.16", default-features = false }
web-sys = { version = "0.3", optional = true, features = ["Window", "MediaQueryList", "Storage"] }

[features]
default = []
csr = ["leptos/csr", "web-sys"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate", "web-sys"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]
